--- a/src/components/page-not-found-view/css/404.css
+++ b/src/components/page-not-found-view/css/404.css
@@ -40,6 +40,11 @@
     margin-left: 20px;
 }
 
+.dark .footer-404{
+    background-color:#000;
+    color: whitesmoke;
+}
+
 .picture-404 {
     z-index: -1;
     border-radius: 10%;
